# hive

./: .dockerignore  .gitignore  Dockerfile.server  Dockerfile.website  LICENSE  README.md  docker-compose.yml
.docker/: Dockerfile.server  Dockerfile.server.base  Dockerfile.website
.github/workflows/: main.yml
frontend/: Cargo.toml  index.html
frontend/public/: index.css  register.css
frontend/src/: component.rs  lib.rs  navbar.rs  page.rs  request.rs
frontend/src/component/: navbar.rs  selector.rs  user_cred.rs
frontend/src/page/: create.rs  game.rs  game_util.rs  home.rs  login.rs  mod.rs  register.rs
frontend/src/page/game/: hex.rs  menu.rs  selected_piece.rs  selector.rs  util.rs
frontend/src/request/: create.rs  game.rs  home.rs  user_cred.rs
server/: Cargo.toml  Dockerfile
server/src/: create_game.rs  database.rs  handle.rs  main.rs  routing.rs  user.rs  websocket.rs
server/src/model/: game.rs  user.rs
server/src/routing/: create_game.rs  game.rs  home.rs  login.rs  register.rs
shared/: Cargo.toml
shared/benches/: create_island.rs
shared/src/: lib.rs
shared/src/model/: board.rs  board_serialize.rs  create_game_form.rs  game.rs  http.rs  mod.rs  user.rs
shared/src/move/: ant.rs  beetle.rs  grasshopper.rs  mod.rs  queen.rs  spider.rs
