[package]
version = "0.1.0"
name = "frontend"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["sivertjoe <sivert-joh@hotmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.8.0"
enum-as-inner = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
wasm-bindgen = "0.2.68"
web-sys = { version = "0.3.45", features = ["SvgGraphicsElement", "SvgMatrix", "DataTransfer", "HtmlDivElement"] }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
