[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
hyper-openssl = "0.9.1"
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.2"
mongodb = "2.1.0"
uuid = { version = "0.8", features = ["v4"] }
sha2 = "0.9.2"
chrono = "0.4"


shared = { path = "../shared" }

[dev-dependencies]
