[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.2"
mongodb = "2.2.1"
uuid = { version = "0.8", features = ["v4"] }
sha2 = "0.9.2"
chrono = "0.4"
getrandom = "0.2.5"
tokio-tungstenite = "0.17.1"
tungstenite = "0.17.2"
const_format = "0.2.22"


shared = { path = "../shared" }

[dev-dependencies]


[profile.release]
lto = true
codegen-units = 1
strip = true
