[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.0"
bson = "2.3.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "create_island"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
